--- a/apps/game/package.json
+++ b/apps/game/package.json
@@ -27,7 +27,11 @@
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.6"
+		"vite": "^4.3.6",
+		"@types/pixi.js": "^5.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pixi.js": "^7.2.4"
+	}
 }
